get events by range
